Documentation edits made through Mintlify web editor

--- a/concepts/autopilot.mdx
+++ b/concepts/autopilot.mdx
@@ -21,7 +21,7 @@ type: "AUTOPILOT"
 speechToText:
   productRef: "stt.deepgram"
   config:
-    model: "nova-2-phonecall"
+    model: "nova-3"
     languageCode: "en-US"
 textToSpeech:
   productRef: "tts.deepgram"
