--- a/contributing/hacking-the-backend.mdx
+++ b/contributing/hacking-the-backend.mdx
@@ -30,14 +30,12 @@ cp config/integrations.example.json config/integrations.json
 
 In the *.env* file you will need to find and update the following variables. All variables will need to be updated to a routable IP within your local environment.
 
-
-
-| Variable                        |   | Description                                                          |   |
-| ------------------------------- | - | -------------------------------------------------------------------- | - |
-| ROUTR\_EXTERNAL\_ADDRS          |   | The IP used by Routr to advertise it's address to othe SIP endpoints |   |
-| ROUTR\_RTPENGINE\_HOST          |   | The address of RTPEngine                                             |   |
-| ASTERISK\_SIPPROXY\_HOST        |   | Address pointing to Routr SIP Server                                 |   |
-| APISERVER\_ROUTR\_API\_ENDPOINT |   | The entrypoint to Routr's API                                        |   |
+| Variable                        |   | Description                                                          |
+| ------------------------------- | - | -------------------------------------------------------------------- |
+| ROUTR\_EXTERNAL\_ADDRS          |   | The IP used by Routr to advertise it's address to othe SIP endpoints |
+| ROUTR\_RTPENGINE\_HOST          |   | The address of RTPEngine                                             |
+| ASTERISK\_SIPPROXY\_HOST        |   | Address pointing to Routr SIP Server                                 |
+| APISERVER\_ROUTR\_API\_ENDPOINT |   | The entrypoint to Routr's API                                        |
 
 <Tip>
   With `ifconfig | grep "en0" -A 5` on Linux or Mac you will see a good candidate to use as the IP.
