--- a/concepts/autopilot.mdx
+++ b/concepts/autopilot.mdx
@@ -221,8 +221,8 @@ operation:
   - **`properties`**: Specifies the fields expected in the input
   - **`required`**: Lists the fields that must be provided
 - **`operation`**:
-  - **`method`**: The HTTP method (`get`, `post`, etc.)
-  - **`url`**: The endpoint that the assistant will call
+  - **`method`**: The HTTP method (`get` and `post` are supported)
+  - **`url`**: The endpoint to send the request to
   - **`headers`**: Any necessary headers, such as authentication keys
 
 For additional details, refer to the [tool schema documentation](https://github.com/fonoster/fonoster/blob/main/mods/common/src/assistants/tools/toolSchema.ts).
