Documentation edits made through Mintlify web editor

--- a/concepts/autopilot.mdx
+++ b/concepts/autopilot.mdx
@@ -229,5 +229,5 @@ For additional details, refer to the [tool schema documentation](https://github.
 
 
 <Tip>
-  Use `operation.type` "post" for POST requests. If you want the Autopilot to wait for POST requests to complete, set `operation.waitForResponse` to `true`. For "get" requests, the Autopilot will wait for the response by default.
+  Use `operation.method` "post" for POST requests. If you want the Autopilot to wait for POST requests to complete, set `operation.waitForResponse` to `true`. For "get" requests, the Autopilot will wait for the response by default.
 </Tip>
