--- a/concepts/autopilot.mdx
+++ b/concepts/autopilot.mdx
@@ -156,11 +156,11 @@ The following is a list of the supported settings:
 
 The Autopilot supports multiple language model providers. The following is a list of the supported providers:
 
-| Provider | Description                                                | Supported models                                                           |
-| -------- | ---------------------------------------------------------- | -------------------------------------------------------------------------- |
-| OpenAI   | OpenAI provides various GPT models for conversational AI   | `gpt-4o`, `gpt-4o-mini`, `gpt-3.5-turbo`, `gpt-4-turbo`                    |
-| Groq     | Groq offers high-performance AI models optimized for speed | `llama-3.1-8b-instant`, `llama-3.3-70b-specdec`, `llama-3.3-70b-versatile` |
-| Ollama   | Self-hosted Ollama models                                  | `llama3-groq-tool-use`                                                     |
+| Provider | Description                                                | Supported models                                        |
+| -------- | ---------------------------------------------------------- | ------------------------------------------------------- |
+| OpenAI   | OpenAI provides various GPT models for conversational AI   | `gpt-4o`, `gpt-4o-mini`, `gpt-3.5-turbo`, `gpt-4-turbo` |
+| Groq     | Groq offers high-performance AI models optimized for speed | `llama-3.3-70b-specdec`, `llama-3.3-70b-versatile`      |
+| Ollama   | Self-hosted Ollama models                                  | `llama3-groq-tool-use`                                  |
 
 <Info>
   We have noticed that Groq models, particularly `llama-3.3-70b-versatile`, often require greater prompting specificity for effective tool usage. We will share best practices to ensure more consistent behavior as we gain more insights
@@ -213,20 +213,29 @@ operation:
 
 ### Key Components of a Tool Definition:
 
-- **`name`**: A unique identifier for the tool
-- **`description`**: A brief explanation of what the tool does
-- **`requestStartMessage`**: The message sent when the tool is triggered
-- **`parameters`**: Defines the expected input structure in accordance with the [JSON Schema standard](https://json-schema.org/), which is also required for OpenAI compatible tool calling
-  - **`type`**: Defines the structure of the input (typically `object`)
-  - **`properties`**: Specifies the fields expected in the input
-  - **`required`**: Lists the fields that must be provided
-- **`operation`**:
-  - **`method`**: The HTTP method (`get` and `post` are supported)
-  - **`url`**: The endpoint to send the request to
-  - **`headers`**: Any necessary headers, such as authentication keys
+* **`name`**: A unique identifier for the tool
+
+* **`description`**: A brief explanation of what the tool does
+
+* **`requestStartMessage`**: The message sent when the tool is triggered
+
+* **`parameters`**: Defines the expected input structure in accordance with the [JSON Schema standard](https://json-schema.org/), which is also required for OpenAI compatible tool calling
+
+  * **`type`**: Defines the structure of the input (typically `object`)
+
+  * **`properties`**: Specifies the fields expected in the input
+
+  * **`required`**: Lists the fields that must be provided
+
+* **`operation`**:
+
+  * **`method`**: The HTTP method (`get` and `post` are supported)
+
+  * **`url`**: The endpoint to send the request to
+
+  * **`headers`**: Any necessary headers, such as authentication keys
 
 For additional details, refer to the [tool schema documentation](https://github.com/fonoster/fonoster/blob/main/mods/common/src/assistants/tools/toolSchema.ts).
-
 
 <Tip>
   Use `operation.method` "post" for POST requests. If you want the Autopilot to wait for POST requests to complete, set `operation.waitForResponse` to `true`. For "get" requests, the Autopilot will wait for the response by default.
@@ -244,11 +253,11 @@ The Autopilot supports automated testing through test cases defined in the confi
 
 The `evalsLanguageModel` section defines the model used to evaluate test cases:
 
-| Setting  | Description                                                                           |
-| -------- | ------------------------------------------------------------------------------------- |
-| provider | The provider of the language model. Currently, only `openai` is supported for evals   |
-| model    | The OpenAI model to use for evaluations                                               |
-| apiKey   | The API key for the evaluation model                                                  |
+| Setting  | Description                                                                         |
+| -------- | ----------------------------------------------------------------------------------- |
+| provider | The provider of the language model. Currently, only `openai` is supported for evals |
+| model    | The OpenAI model to use for evaluations                                             |
+| apiKey   | The API key for the evaluation model                                                |
 
 <Note>
   The evaluation model is separate from the model used in actual conversations. This separation allows for consistent evaluation results regardless of the production model being used.
@@ -258,12 +267,17 @@ The `evalsLanguageModel` section defines the model used to evaluate test cases:
 
 Each test scenario represents a complete conversation flow. The scenario includes:
 
-- **`ref`**: A unique identifier for the test case
-- **`description`**: A brief description of what the test case verifies
-- **`telephonyContext`**: Emulates the context of a real phone call with the following properties:
-  - `callDirection`: The direction of the call (e.g., "FROM_PSTN")
-  - `ingressNumber`: The number being called
-  - `callerNumber`: The number making the call
+* **`ref`**: A unique identifier for the test case
+
+* **`description`**: A brief description of what the test case verifies
+
+* **`telephonyContext`**: Emulates the context of a real phone call with the following properties:
+
+  * `callDirection`: The direction of the call (e.g., "FROM\_PSTN")
+
+  * `ingressNumber`: The number being called
+
+  * `callerNumber`: The number making the call
 
 This information is available to the AI model to help it understand the context of the call and might be use in your prompts.
 
@@ -271,15 +285,15 @@ This information is available to the AI model to help it understand the context 
 
 Each scenario contains a series of conversation turns. A turn represents a single interaction between the user and the Autopilot, consisting of:
 
-| Component  | Description                                                                    |
-| ---------- | ------------------------------------------------------------------------------ |
-| userInput  | The text representing what the user says                                       |
-| expected   | The expected response from the Autopilot                                       |
-| expected.text | The expected text response from the Autopilot |
-| expected.text.type | We support two types of expected responses: `similar` and `exact` |
-| expected.text.response | The actual text response from the Autopilot |
-| expected.tools | The expected tools to be used in the response |
-| expected.tools.tool | The name of the tool to be used |
+| Component                 | Description                                                                                                                                                                                                         |
+| ------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| userInput                 | The text representing what the user says                                                                                                                                                                            |
+| expected                  | The expected response from the Autopilot                                                                                                                                                                            |
+| expected.text             | The expected text response from the Autopilot                                                                                                                                                                       |
+| expected.text.type        | We support two types of expected responses: `similar` and `exact`                                                                                                                                                   |
+| expected.text.response    | The actual text response from the Autopilot                                                                                                                                                                         |
+| expected.tools            | The expected tools to be used in the response                                                                                                                                                                       |
+| expected.tools.tool       | The name of the tool to be used                                                                                                                                                                                     |
 | expected.tools.parameters | The parameters to be used in the tool. The parameters must match the tool's parameters exactly or the test will fail. For dates, you can use the special value `valid-date` the response must contain a valid date. |
 
 <Tip>
@@ -288,14 +302,16 @@ Each scenario contains a series of conversation turns. A turn represents a singl
 
 The `expected` object can validate:
 
-- **Text responses** via the `text` property:
+* **Text responses** via the `text` property:
+
   ```yaml
   text:
     type: "similar"
     response: "Expected response..."
   ```
 
-- **Tool usage** via the `tools` property:
+* **Tool usage** via the `tools` property:
+
   ```yaml
   tools:
     - tool: "toolName"
